about page added

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                             <h2>Machinery</h2>
                             <div class="infoDiv">
                                 <p>Heavy equipment refers to heavy-duty vehicles, specially designed for executing construction tasks, most frequently ones involving earthwork operations. They are also known as heavy machines, heavy trucks, construction equipment, engineering equipment, heavy vehicles, or heavy hydraulics.</p>
-                                <!-- <a href="#" class="anchorLink type2"><cite></cite>More</a> -->
+                                <a href="#" class="anchorLink type2"><cite></cite>More</a>
                             </div>
                         </div>
 
@@ -539,87 +539,86 @@
 
                 </div>
             </div>
-        </section>
-            <section id="careerSection">
-                <div class="row multiple collapse careerPanel">
-                    <div class="small-16 medium-16 large-8 column career1Bg ">
-
-                        <div class="career-wrapper">
-                            <h2>CAREERS</h2>
-                            <div class="career-list">
-                                <div class="career-panel">
-                                    <div class="career-img">
-                                        <img src="https://corpwebstorage.blob.core.windows.net/media/34331/career1image.jpg"
-                                            alt="slide 1" />
-                                    </div>
-                                    <div class="career-thumb">
-                                        <h3>Campus Recruitment</h3>
-                                        <div class="career-link">
-                                            <a href="corporate/careers/campus-recruitment/index.html" target="_self"
-                                                class="anchorLink type2"><cite></cite></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="career-list">
-                                <div class="career-panel career-bottom">
-                                    <div class="career-img img-right">
-                                        <img src="https://corpwebstorage.blob.core.windows.net/media/34332/career2image.jpg"
-                                            alt="slide 1" />
-                                    </div>
-                                    <div class="career-thumb">
-                                        <h3>Learning & Development</h3>
-                                        <div class="career-link">
-                                            <a href="corporate/careers/learning-development/index.html" target="_self"
-                                                class="anchorLink type2"><cite></cite></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="small-16 medium-16 large-8 column career2Bg"
-                        style="background-image: url(https://corpwebstorage.blob.core.windows.net/media/36148/dsc_6806.jpg)">
-
-                        <!-- <div  class="rowContent"></div> -->
-                        <div class="quotePanel">
-                            <div class="carousel slide" data-ride="carousel" id="quoteCarousel">
-                                <!-- Bottom Carousel Indicators -->
-                                <!-- Carousel Slides / Quotes -->
-                                <div class="carousel-inner">
-                                    <!-- Quote 1 -->
-                                    <div class="item active">
-                                        <blockquote>
-                                            <div class="row">
-                                                <div class="col-sm-3 text-center">
-                                                </div>
-                                                <div class="col-sm-10">
-
-                                                    <p><span>L&amp;T is a team of more than 50000 professionals spread
-                                                            across the globe. We combine a proven track record and
-                                                            professional skills, woven together with a culture of trust
-                                                            &amp; caring.</span></p>
-
-
-
-                                                </div>
-                                            </div>
-                                        </blockquote>
-                                    </div>
-
-                                    <div class="linkBottom">
-                                        <a href="corporate/careers/overview/index.html" target="_self"
-                                            class="anchorLink type2"><cite></cite>View More </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
             </section>
-        </div>
-        
+                <section id="careerSection">
+                    <div class="row multiple collapse careerPanel">
+                        <div class="small-16 medium-16 large-8 column career1Bg ">
+
+                            <div class="career-wrapper">
+                                <h2>CAREERS</h2>
+                                <div class="career-list">
+                                    <div class="career-panel">
+                                        <div class="career-img">
+                                            <img src="https://corpwebstorage.blob.core.windows.net/media/34331/career1image.jpg"
+                                                alt="slide 1" />
+                                        </div>
+                                        <div class="career-thumb">
+                                            <h3>Campus Recruitment</h3>
+                                            <div class="career-link">
+                                                <a href="corporate/careers/campus-recruitment/index.html" target="_self"
+                                                    class="anchorLink type2"><cite></cite></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="career-list">
+                                    <div class="career-panel career-bottom">
+                                        <div class="career-img img-right">
+                                            <img src="https://corpwebstorage.blob.core.windows.net/media/34332/career2image.jpg"
+                                                alt="slide 1" />
+                                        </div>
+                                        <div class="career-thumb">
+                                            <h3>Learning & Development</h3>
+                                            <div class="career-link">
+                                                <a href="corporate/careers/learning-development/index.html" target="_self"
+                                                    class="anchorLink type2"><cite></cite></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small-16 medium-16 large-8 column career2Bg"
+                            style="background-image: url(https://corpwebstorage.blob.core.windows.net/media/36148/dsc_6806.jpg)">
+
+                            <!-- <div  class="rowContent"></div> -->
+                            <div class="quotePanel">
+                                <div class="carousel slide" data-ride="carousel" id="quoteCarousel">
+                                    <!-- Bottom Carousel Indicators -->
+                                    <!-- Carousel Slides / Quotes -->
+                                    <div class="carousel-inner">
+                                        <!-- Quote 1 -->
+                                        <div class="item active">
+                                            <blockquote>
+                                                <div class="row">
+                                                    <div class="col-sm-3 text-center">
+                                                    </div>
+                                                    <div class="col-sm-10">
+
+                                                        <p><span>L&amp;T is a team of more than 50000 professionals spread
+                                                                across the globe. We combine a proven track record and
+                                                                professional skills, woven together with a culture of trust
+                                                                &amp; caring.</span></p>
+
+
+
+                                                    </div>
+                                                </div>
+                                            </blockquote>
+                                        </div>
+
+                                        <div class="linkBottom">
+                                            <a href="corporate/careers/overview/index.html" target="_self"
+                                                class="anchorLink type2"><cite></cite>View More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+            </div>
         <div class="home-map">
             <div class="info-box">
                 <div class="home-map-title">Main Awards</div>
@@ -631,8 +630,6 @@
             </div>
             <div class="map-box"></div>
         </div>
-
-
         <div class="row collapse blueBg3">
             <div class="rowContent">
                 <ul class="smLinks clearfix">
@@ -648,11 +645,7 @@
             </div>
         </div>
 
-
-
         <!-- Footer Starts-->
-
-
         <div class="row collapse footer">
             <div class="rowContent">
                 <footer>
