about services and why choose page design added

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                             <h2><a href="index.html" class="current">Home</a></h2>
                         </li>
                         <li>
-                            <h2><a href="corporate/about-lt-group/index.html" class="">About L&amp;T Group</a></h2>
+                            <h2><a href="/about-us.html" class="">About L&amp;T Group</a></h2>
                             <div class="header_subnav">
                                 <h3>About Us</h3>
                                 <div class="header_subnav-wrap">
                                     <div class="header_subnav-left">
                                         <p>systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers.</p>
-                                        <a href="#">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
+                                        <a href="/about-us.html">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
                                             <polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5">
                                             </polygon>
                                         </svg></a>
@@ -114,11 +114,11 @@
 
                         </li>
                         <li>
-                            <h2><a href="corporate/our-businesses/index.html" class="">Our Businesses</a></h2>
+                            <h2><a href="/services.html" class="">Our Services</a></h2>
 
                         </li>
                         <li>
-                            <h2><a href="https://www.lntsustainability.com/" class="">Sustainability</a></h2>
+                            <h2><a href="/why-choose-us.html" class="">Why Choose Us</a></h2>
                         </li>
                         <li>
                             <h2><a href="corporate/products-and-services/index.html" class="">Products And Services</a>
