--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -100,13 +100,13 @@
                             <h2><a href="index.html" class="current">Home</a></h2>
                         </li>
                         <li>
-                            <h2><a href="corporate/about-lt-group/index.html" class="">About L&amp;T Group</a></h2>
+                            <h2><a href="/about-us.html" class="">About L&amp;T Group</a></h2>
                             <div class="header_subnav">
                                 <h3>About Us</h3>
                                 <div class="header_subnav-wrap">
                                     <div class="header_subnav-left">
                                         <p>systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers.</p>
-                                        <a href="#">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
+                                        <a href="/about-us.html">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
                                             <polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5">
                                             </polygon>
                                         </svg></a>
@@ -164,88 +164,93 @@
                 <div class="t-w_bg-overlay"></div>
                 <div class="rowContent">
                     <div class="head-content">
-                        <h1>About Us</h1>
+                        <h1>Why Choose Us</h1>
                         <p>knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business scale knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business.</p>
                     </div>
                 </div>
             </div>
             <div class="p-content">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Who we are</h3>
-                    <h2 class="p-content-info">Encouraging inclusive growth</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="p-content">
-                <div class="p-content-left">
-                    <h3 class="p-content-title">Who we are</h3>
-                    <ul>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">ECR BUILDTECH PVT. LTD. is a concern set up by Mr. Esab Khan at Bhiwadi, our Chairman. He has been our growth engine, guiding and motivating force in the consistent growth of the company. Our team comprises of professionals with rich experience, technically qualified Project Managers, Site engineers safety/quality personnel, skilled artisans and workers with the strong from corporate office.<br/><br/>With the dedicated team spirit and due diligence, we have accomplished many major projects over last two decades consultants in industrial/commercial and residential construction segments. This is how, we are marching ahead with newer goals.
-                    </p>
-                </div>
-            </div>
-            <div class="p-content">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Our Vision</h3>
-                    <h2 class="p-content-info">Encouraging inclusive</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="p-content invert">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Our Vision</h3>
-                    <h2 class="p-content-info">Encouraging inclusive</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="head-container">
-                <div class="t-w_bg-overlay-green"></div>
                 <div class="rowContent">
-                    <div class="head-content text-center">
-                        <div class="pr-content">
-                            <div class="pr-content-block">
-                                <h2>Project Management</h2>
-                                <span>At ECR Buildtech Pvt. Ltd., project management focuses on providing an approval process that is submitted in a timely manner, keeping contracts current, and providing accountability to the owner. In addition, scheduling is handled in order to maintain on-time performance, bringing added value to the project and acting as project solvers, as required. This is accomplished by understanding all of the owners’ processes.</span>
+                    <div class="service-container">
+                        <p class="p-content-para">Pre-construction services are used in planning a construction project before the actual construction begins. These services are often referred to as preconstruction or precon. It is a modern practice, considered to be part of construction project management, which is the overall planning, coordination, and control of a project from inception to completion aimed at meeting a client’s requirements in order to produce a functionally and financially viable project<br/>
+                    </div>
+                    <div class="choose-us">
+                        <a href="" class="choose-us-block full">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>CONSTRUCTABILITY</p>
                             </div>
-                            <div class="pr-content-block">
-                                <h2>Quality Feature of Our Management</h2>
-                                <span>With a motto of quality service upto satisfaction of our valuable clients, we are working in the field of residential and industrial building construction.</span>
+                            <div class="slide-info">Throughout the preconstruction process, we always take into account constructability of all the building elements, and we work directly with the design team to perform constructability reviews.Our staff has unique knowledge of building that only comes from hands-on experience.Because ECRB is a builder as well as a manager.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>COST CERTAINTY</p>
                             </div>
-                            <div class="pr-content-block">
-                                <h2>Active Campus Planning</h2>
-                                <span>We take a very detailed analysis of your day-to-day operations to minimize disruption to your operations. Over the years, we have learned what is most important in various specific environments. From minimizing disruptions to keeping you safe and not the other way around.</span>
+                            <div class="slide-info">ECRB understands that delivering a project within budget is one of the keys to its success. ECRB’ seasoned estimating and project management staff will ensure that you have the project-specific cost information, reviews and recommendations needed to thoughtfully evaluate design options while maximizing your budget.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>DESIGN ASSIST</p>
                             </div>
-                        </div>
+                            <div class="slide-info">The Design Assist approach produces a “best value designed” building with lower life-cycle costs and a sensible payback period. Collaboration with design team members (Architect) begins during the conceptuals phase and continues throughout design, construction and commissioning. (When design is in our scope)</div>
+                        </a>
+                        <a href="" class="choose-us-block full">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>ENERGY ANALYSIS</p>
+                            </div>
+                            <div class="slide-info">We are constantly striving to provide our clients with the most comprehensive information available to make informed decisions about their investments. In the evaluation of systems and strategies, energy modeling allows us to take our standard value analysis a step further by incorporating information on energy savings over time.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>ESTIMATING</p>
+                            </div>
+                            <div class="slide-info">Our in-house estimating staff brings years of hands-on building experience and includes mechanical and electrical professionals ensuring knowledgeable, reliable estimates which can base critical planning and decision making. Integrated into our estimating procedures will be all value engineering and constructability.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>LEAN CONSTRUCTION</p>
+                            </div>
+                            <div class="slide-info">Lean techniques streamline the construction process to eliminate waste and deliver efficiency. Often, the schedule can be accelerated through minimizing inefficient breaks and downtime, and costs can be lowered by minimizing subcontractors’ time and maximizing their productivity.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>LEED & SUSTAINABILITY</p>
+                            </div>
+                            <div class="slide-info">ECR can assist you in producing an environmentally responsible building with optimal energy efficiency and lower life cycle costs. By establishing high-performance and environmental goals, as well as baseline measurements, and identifying applicable practices and strategies, we can document progress levels and, if LEED Certification is desired, determine the required documentation to achieve project goals.</div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>SCHEDULE MANAGEMENT</p>
+                            </div>
+                            <div class="slide-info">We focus on developing a comprehensive and achievable schedule which can be used as an accurate planning tool for the life of project. Our on-site project team goes to great lengths to ensure schedules are met and coordinated with business operations. </div>
+                        </a>
+                        <a href="" class="choose-us-block half">
+                            <img src="/assets/images/rewamp_images/subpage-bg.jpg">
+                            <div class="-filter"></div>
+                            <div class="choose-us-content">
+                                <p>VALUE ANALYSIS</p>
+                            </div>
+                            <div class="slide-info">Our Value Analysis process has one primary objective – maximizing the value of every dollar spend. This strategic analysis takes into account a plethora of factors for each proposed item to create a complete picture of the savings and costs associated with each. This is all presented in a clear, categorized matrix to give the information you need to make critical decisions about project.</div>
+                        </a>
                     </div>
                 </div>
             </div>
+
         </div>
 
         <!-- Footer Starts-->
