--- a/services.html
+++ b/services.html
@@ -100,13 +100,13 @@
                             <h2><a href="index.html" class="current">Home</a></h2>
                         </li>
                         <li>
-                            <h2><a href="corporate/about-lt-group/index.html" class="">About L&amp;T Group</a></h2>
+                            <h2><a href="/about-us.html" class="">About L&amp;T Group</a></h2>
                             <div class="header_subnav">
                                 <h3>About Us</h3>
                                 <div class="header_subnav-wrap">
                                     <div class="header_subnav-left">
                                         <p>systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers systems span all frontiers.</p>
-                                        <a href="#">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
+                                        <a href="/about-us.html">Click More<svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16">
                                             <polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5">
                                             </polygon>
                                         </svg></a>
@@ -164,88 +164,63 @@
                 <div class="t-w_bg-overlay"></div>
                 <div class="rowContent">
                     <div class="head-content">
-                        <h1>About Us</h1>
+                        <h1>Our Services</h1>
                         <p>knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business scale knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business.</p>
                     </div>
                 </div>
             </div>
             <div class="p-content">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Who we are</h3>
-                    <h2 class="p-content-info">Encouraging inclusive growth</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="p-content">
-                <div class="p-content-left">
-                    <h3 class="p-content-title">Who we are</h3>
-                    <ul>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                        <li>
-                            <span class="p-content-title-text">gjhgjffj ghjg jgj</span>
-                            <div class="p-content-text">222397</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">ECR BUILDTECH PVT. LTD. is a concern set up by Mr. Esab Khan at Bhiwadi, our Chairman. He has been our growth engine, guiding and motivating force in the consistent growth of the company. Our team comprises of professionals with rich experience, technically qualified Project Managers, Site engineers safety/quality personnel, skilled artisans and workers with the strong from corporate office.<br/><br/>With the dedicated team spirit and due diligence, we have accomplished many major projects over last two decades consultants in industrial/commercial and residential construction segments. This is how, we are marching ahead with newer goals.
-                    </p>
-                </div>
-            </div>
-            <div class="p-content">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Our Vision</h3>
-                    <h2 class="p-content-info">Encouraging inclusive</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="p-content invert">
-                <div class="p-content-left">
-                    <img src="/assets/images/rewamp_images/side-img.jpg" class="p-content-img">
-                    <div class="t-w_bg-overlay-white"></div>
-                    <h3 class="p-content-title">Our Vision</h3>
-                    <h2 class="p-content-info">Encouraging inclusive</h2>
-                </div>
-                <div class="p-content-right">
-                    <p class="p-content-para">As an investor, builder and operator of buildings and infrastructure in more than 100 countries, VINCI plays a key role in the transformation of cities and regions.</p>
-                </div>
-            </div>
-            <div class="head-container">
-                <div class="t-w_bg-overlay-green"></div>
                 <div class="rowContent">
-                    <div class="head-content text-center">
-                        <div class="pr-content">
-                            <div class="pr-content-block">
-                                <h2>Project Management</h2>
-                                <span>At ECR Buildtech Pvt. Ltd., project management focuses on providing an approval process that is submitted in a timely manner, keeping contracts current, and providing accountability to the owner. In addition, scheduling is handled in order to maintain on-time performance, bringing added value to the project and acting as project solvers, as required. This is accomplished by understanding all of the owners’ processes.</span>
+                    <div class="service-container">
+                        <p class="p-content-para">Pre-construction services are used in planning a construction project before the actual construction begins. These services are often referred to as preconstruction or precon. It is a modern practice, considered to be part of construction project management, which is the overall planning, coordination, and control of a project from inception to completion aimed at meeting a client’s requirements in order to produce a functionally and financially viable project<br/><br>
+                        Our construction management success is largely a result of what we contribute and accomplish during preconstruction. The ECRB Preconstruction model is a comprehensive and collaborative “building-team” process, initiated at project conception, and executed throughout the design phase.<br/><br/>
+                        The program enables our team to provide cost and schedule certainty, value driven building solutions, a high level of facility/ building performance, and ultimately, enhanced customer satisfaction.</p>
+                    </div>
+                    <div class="serve-blocks">
+                        <a href="" class="serve-block">
+                            <div class="serve-block-img">
+                                <img src="/assets/images/rewamp_images/business-img.jpg">
                             </div>
-                            <div class="pr-content-block">
-                                <h2>Quality Feature of Our Management</h2>
-                                <span>With a motto of quality service upto satisfaction of our valuable clients, we are working in the field of residential and industrial building construction.</span>
+                            <div class="serve-block-content">
+                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
                             </div>
-                            <div class="pr-content-block">
-                                <h2>Active Campus Planning</h2>
-                                <span>We take a very detailed analysis of your day-to-day operations to minimize disruption to your operations. Over the years, we have learned what is most important in various specific environments. From minimizing disruptions to keeping you safe and not the other way around.</span>
+                        </a>
+                        <a href="" class="serve-block">
+                            <div class="serve-block-img">
+                                <img src="/assets/images/rewamp_images/business-img.jpg">
                             </div>
-                        </div>
+                            <div class="serve-block-content">
+                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
+                            </div>
+                        </a>
+                        <a href="" class="serve-block">
+                            <div class="serve-block-img">
+                                <img src="/assets/images/rewamp_images/business-img.jpg">
+                            </div>
+                            <div class="serve-block-content">
+                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
+                            </div>
+                        </a>
+                        <a href="" class="serve-block">
+                            <div class="serve-block-img">
+                                <img src="/assets/images/rewamp_images/business-img.jpg">
+                            </div>
+                            <div class="serve-block-content">
+                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
+                            </div>
+                        </a>
+                        <a href="" class="serve-block">
+                            <div class="serve-block-img">
+                                <img src="/assets/images/rewamp_images/business-img.jpg">
+                            </div>
+                            <div class="serve-block-content">
+                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
+
         </div>
 
         <!-- Footer Starts-->
